--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container header-search">
         <label for="numberSearch">Nhập số ảnh cần xem: </label> <input type="text" name="" id="numberSearch"> <button id="search"><i class="fa-solid fa-magnifying-glass"></i> Search</button> <span id="message"></span> <button id="refresh">Refresh</button>
     </div>
 
